[fix] (ABC-1163): Fix list action alignment in popovers (#765)

--- a/src/modules/base/list/list.css
+++ b/src/modules/base/list/list.css
@@ -218,6 +218,8 @@
 }
 
 .avonni-list__item-actions-container {
+    margin: var(--lwc-spacingXSmall, 0.5rem) var(--lwc-spacingXSmall, 0.5rem)
+        var(--lwc-spacingXSmall, 0.5rem) 0;
     align-self: var(
         --avonni-list-item-actions-vertical-alignment,
         var(--avonni-list-item-body-vertical-alignment, center)
